--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-ECHO est† ativado.
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Curso de Git e Github</title>
+</head>
+<body>
+    <h2>Minha p√°gina inicial</h2>
+</body>
+</html>
